# I2C-Pico-USB

./: README.md
firmware/: .gitignore  CMakeLists.txt  bbi2c.c  bbi2c.h  hwconfig.h  i2cpicousb.c  i2cusb.h  tusb_config.h  usb_descriptors.c
firmware/build_pico/: i2cpicousb.uf2
firmware/build_pico2/: i2cpicousb.uf2
firmware/build_xiao2040/: i2cpicousb.uf2
tests/linux/ti2c/: ti2c.c
tests/windows/python/: test.py
